Adding monitor page

--- a/templates/files.html
+++ b/templates/files.html
@@ -141,6 +141,7 @@
         <ul class="nav-list">
             <li><a href="/">Home</a></li>
             <li><a href="/files">Upload Files</a></li>
+            <li><a href="/data_flow">Process Monitor</a></li>            
             <li><a href="/table_data">Data Preview</a></li>
             <li><a href="/visualizations">BI Dashboards</a></li>
             <li><a href="/explore_data">QuickQueryAI</a></li>
