--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     window.mermaid = mermaid;
 </script>    <style>
+        .container {
+            max-width: 800px;
+        }
         .feature-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -83,6 +86,7 @@
         <ul class="nav-list">
             <li><a href="/">Home</a></li>
             <li><a href="/files">Upload Files</a></li>
+            <li><a href="/data_flow">Process Monitor</a></li>            
             <li><a href="/table_data">Data Preview</a></li>
             <li><a href="/visualizations">BI Dashboards</a></li>
             <li><a href="/explore_data">QuickQueryAI</a></li>
